unpackaged/main/default/objects/Account_Application__c/Account_Application__c.object-meta.xml
<CustomObject>
    <label>Account Application</label>
    <nameField>
        <label>Account Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>