unpackaged/main/default/objects/Account_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Account Applications</relationshipLabel>
    <relationshipName>Retail_Account_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>