unpackaged/main/default/objects/Account_Application__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Name of the Account that is not in Salesforce</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>