unpackaged/main/default/objects/Account_Application__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Makers Mark</fullName>
            </value>
            <value>
                <fullName>El Tesoro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>