unpackaged/main/default/objects/Account_Application__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Account Applications</relationshipLabel>
    <relationshipName>Account_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>