unpackaged/main/default/objects/Account_Application__c/fields/Diplomat_Partner_for_Your_Barrel__c.field-meta.xml
<CustomField>
    <fullName>Diplomat_Partner_for_Your_Barrel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diplomat Partner for Your Barrel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>