unpackaged/main/default/objects/Account_Application__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Applications</relationshipLabel>
    <relationshipName>Distributor_Contact_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>