unpackaged/main/default/objects/Account_Application__c/fields/National_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Account Flag</label>
    <type>Checkbox</type>
</CustomField>