unpackaged/main/default/objects/Account_Application__c/fields/Regional_Diplomat__c.field-meta.xml
<CustomField>
    <fullName>Regional_Diplomat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Diplomat</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>