unpackaged/main/default/objects/Account_Application__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>