unpackaged/main/default/objects/Account_Application__c/recordTypes/Account_Approval.recordType-meta.xml
<RecordType>
    <fullName>Account_Approval</fullName>
    <active>true</active>
    <description>Request to Approve an Account</description>
    <label>Account Approval</label>
</RecordType>