unpackaged/main/default/objects/Account_Application__c/listViews/Makers_Mark_Brand_Team_Domestic_Account_Application.listView-meta.xml
<ListView>
    <fullName>Makers_Mark_Brand_Team_Domestic_Account_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Makers Mark - Brand Team(Domestic)</label>
    <queue>Makers_Mark_Brand_Team_Domestic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>